# ImageAlgorithm

./: CMakeLists.txt  main.cpp  run.sh
include/: Image.hpp  image_algorithms.hpp
src/: Image.cpp  image_algorithms.cpp
